--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -10,20 +10,13 @@ name: render
 
 jobs:
   render:
-    runs-on: ${{ matrix.config.os }}
-    container: ${{ matrix.config.image }}
+    runs-on: ubuntu-latest
+    container: bioconductor/bioconductor_docker:latest
 
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        config:
-          - { os: macOS-latest, r: 'release', bioc: '3.11'}
+    name: bioconductor_docker:latest
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-      CRAN: ${{ matrix.config.cran }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
@@ -33,56 +26,19 @@ jobs:
         with:
           submodules: true
 
-      - name: Set up R
-        uses: r-lib/actions/setup-r@master
-        with:
-          r-version: ${{ matrix.config.r }}
-
-      - name: Set up pandoc
-        uses: r-lib/actions/setup-pandoc@master
-
-      - name: Install remotes
+      - name: Set up renv
         run: |
-          install.packages('remotes', Ncpus = 2L)
+          install.packages('renv')
+          renv::install(c('BiocManager', 'remotes'))
         shell: Rscript {0}
-
-      - name: Set BiocManager version
-        if: matrix.config.image == null
-        run: |
-          install.packages('BiocManager', Ncpus = 2L)
-          BiocManager::install(version = "${{ matrix.config.bioc }}", ask = FALSE)
-        shell: Rscript {0}
-
-      - name: Query dependencies
-        run: |
-          saveRDS(remotes::dev_package_deps(dependencies = TRUE, repos = c(getOption('repos'), BiocManager::repositories())), 'depends.Rds', version = 2)
-        shell: Rscript {0}
-
-      - name: Cache R packages
-        uses: actions/cache@v1
-        with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-r-${{ matrix.config.r }}-bioc-${{ matrix.config.bioc }}-${{ hashFiles('depends.Rds') }}
-          restore-keys: ${{ runner.os }}-r-${{ matrix.config.r }}-bioc-${{ matrix.config.bioc }}-
 
       - name: Install dependencies
         run: |
-          local_deps <- remotes::local_package_deps(dependencies = TRUE)
-          deps <- remotes::dev_package_deps(dependencies = TRUE, repos = BiocManager::repositories())
-          BiocManager::install(local_deps[local_deps %in% deps$package[deps$diff != 0]], Ncpu = 2L)
-        shell: Rscript {0}
-
-      - name: Session info
-        run: |
-          install.packages('sessioninfo', Ncpus = 2L)
-          options(width = 100)
-          pkgs <- installed.packages()[, "Package"]
-          sessioninfo::session_info(pkgs, include_base = TRUE)
+          renv::restore()
         shell: Rscript {0}
 
       - name: Render site
         run: |
-          install.packages('rmarkdown', Ncpus = 2L)
           rmarkdown::render(input = "index.Rmd")
         shell: Rscript {0}
 
