--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -48,7 +48,7 @@ jobs:
           cp -r img libs my-theme.css index.html _site/
 
       - name: Deploy 🚀
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main' && matrix.config.os == 'macOS-latest' && matrix.config.r == 'release' && matrix.config.bioc == '3.11'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
