--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -47,6 +47,12 @@ jobs:
           mkdir _site
           cp -r img libs my-theme.css index.html _site/
 
+      # deploy needs rsync? Seems so.
+      - name: Install deploy dependencies
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: |
+          apt-get update && apt-get -y install rsync
+
       - name: Deploy 🚀
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: JamesIves/github-pages-deploy-action@releases/v3
